--- a/index.html
+++ b/index.html
@@ -116,17 +116,11 @@
             <span class="workout__unit">m</span>
           </div>
         </li> -->
+        <button class="reset__btn">Reset</button>
       </ul>
 
       <p class="copyright">
-        &copy; Copyright by
-        <a
-          class="twitter-link"
-          target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own.
+        &copy; Created by Jūratė Sveikauskė following Jonas Schmedtmann course
       </p>
     </div>
 
